<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background_color"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/inner_toolbar"
            style="@style/Widget.MaterialComponents.ActionBar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:title="Settings"
            app:navigationIcon="@drawable/ic_arrow_back_screen"
            app:navigationIconTint="@android:color/black"/>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/provided_by"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/provider_description"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_openweather" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/one"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/about">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/black"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degreeC"
                android:tag="C"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/c"
                android:layout_width="80dp"
                android:layout_height="40dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degreeF"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/f"
                android:layout_width="80dp"
                android:layout_height="40dp"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/two"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/one">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/black"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/speed_ms"
                android:textAllCaps="false"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/m_s"
                android:layout_width="80dp"
                android:layout_height="40dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/speed_kmh"
                android:textAllCaps="false"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/km_h"
                android:layout_width="80dp"
                android:layout_height="40dp"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/three"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/two">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/black"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pressmmHg"
                style="?attr/materialButtonOutlinedStyle"
                android:textAllCaps="false"
                android:text="@string/mmhg"
                android:layout_width="80dp"
                android:layout_height="40dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/presshPa"
                style="?attr/materialButtonOutlinedStyle"
                android:textAllCaps="false"
                android:text="@string/hpa"
                android:layout_width="80dp"
                android:layout_height="40dp"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>